fix data kinerja opd
