# model/domain/jenisdata.go
@@ -4,3 +4,10 @@ type JenisData struct {
 	Id        int
 	JenisData string
 }
+
+type JenisDataOpd struct {
+	Id        int
+	KodeOpd   string
+	NamaOpd   string
+	JenisData string
+}
